--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-example-plugin",
-	"name": "Example Plugin",
+	"id": "openai-webclipper",
+	"name": "OpenAI Webclipper",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is an example plugin for Obsidian. This plugin counts the lines of the active file and prints it in the status bar.",
-	"author": "Florian Ludewig",
-	"authorUrl": "https://flolu.de",
-	"fundingUrl": "https://flolu.de/donations",
+	"description": "This is a plugin to create an automated webclipper for obsidian using OpenAI",
+	"author": "Christian Kastner",
+	"authorUrl": "https://www.christianmkastner.com",
+	"fundingUrl": "https://www.christianmkastner.com",
 	"isDesktopOnly": false
 }
