--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"dotenv": "^16.4.5",
+		"openai": "^4.57.0",
+		"zod": "^3.23.8"
 	}
 }
